--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 osx_image: xcode7.2
 xcode_workspace: travis-test.xcworkspace
-xcode_scheme: travis-testTests
+xcode_scheme: travis-test
