--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: objective-c
 osx_image: xcode7.2
 xcode_workspace: travis-test.xcworkspace
 xcode_scheme: travis-test
+xcode_sdk: iphonesimulator9.2
