--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: objective-c
-osx_image: xcode7.2
-xcode_workspace: travis-test.xcworkspace
-xcode_scheme: travis-test
-xcode_sdk: iphonesimulator9.2
+script:
+	- xctool -workspace travis-test.xcworkspace travis-test -sdk iphonesimulator
+	- xctoll test -workspace travis-test.xcworkspace travis-testTests -sdk iphonesimulator
