--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ before_install:
   - brew install xctool
   - brew install swiftlint
 script:
-  - bundle exec rake build
-  - bundle exec rake builddoc
+  - xctool -workspace travis-test.xcworkspace -scheme travis-test -sdk iphonesimulator build test
+  - swiftlint
