--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: objective-c
+cache: cocoapods
+osx_image: xcode7.2 #2
+xcode_workspace: travis-test.xcworkspace #3
+xcode_scheme: travis-test #4
+xcode_sdk: iphonesimulator9.2 #5
+
 before_install:
   - brew update
-  - brew install xctool
-  - brew install swiftlint
+  - brew outdated xctool || brew upgrade xctool
+  - brew outdated swiftlint || brew upgrade swiftlint
+# before_script:
+#   - swiftlint
 script:
-  - xctool -workspace travis-test.xcworkspace -scheme travis-test -sdk iphonesimulator build test
   - swiftlint
+  # - xctool -workspace travis-test.xcworkspace -scheme travis-test -sdk iphonesimulator build test
