--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ xcode_sdk: iphonesimulator9.2 #5
 before_install:
   - brew update
   - brew outdated xctool || brew upgrade xctool
-  - brew outdated swiftlint || brew upgrade swiftlint
+  - brew outdated swiftlint || brew upgrade swiftlint || brew install swiftlint
 # before_script:
 #   - swiftlint
 script:
