--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: objective-c
+osx_image: xcode7.2
 cache: cocoapods
 
 before_install:
-  # - brew update
-  # - brew outdated xctool || brew upgrade xctool
+  - brew update
+  - brew outdated xctool || brew upgrade xctool
   - brew install swiftlint
-# before_script:
-#   - swiftlint
 script:
-  - swiftlint
+  - swiftlint lint
   - xctool -workspace travis-test.xcworkspace -scheme travis-test -sdk iphonesimulator9.2 build test
